# hasc

./: .gitignore  .gitmodules
ex00/: CMakeLists.txt  compiler_flags.cc  compiler_flags_bm.cc  daxpy.cc  daxpy_bm.cc  daxpy_bm_2.cc  time_experiment.hh
ex01/: CMakeLists.txt  ex1_pointer_chasing.md  ex2_peak_performance.md  matmul_seq_v2.cc  midpoint_rule.hh  mp_test.cc  pointer_chasing.cc  pointer_chasing.ipynb  pointer_chasing.md  pointer_chasing_results_clang_O1.txt  pointer_chasing_results_clang_O1_native.txt  time_experiment.hh
ex01/01_pointer_chasing/: CMakeLists.txt  pointer_chasing.py
ex01/03_numerical_integration/: CMakeLists.txt  ex3_numerical_integration.md  functions.hh  mp_bench.cc  mp_test.cc  pow_int.h
ex01/stream/: Makefile
ex02/: CMakeLists.txt  transpose.cc  transpose.hh  transpose_avx.cc  transpose_gcc_O3.txt  transpose_plot.py
ex02/01_lu_decomposition/: lu_decomposition.md
ex02/02_matrix_transpose/: CMakeLists.txt  matrix_transpose.md  table.html  table_2.html  table_3.html  table_4.html  transpose.cc  transpose.hh  transpose_avx.cc  transpose_avx.hh  transpose_avx_gcc_O3_restrict.txt  transpose_gcc_O3_restrict.txt  transpose_test.cc  transpose_trimatrix.cc  transpose_trimatrix_gcc_O3.txt  trimatrix.hh
ex03/: CMakeLists.txt  barrier.hh  nbody.md  nbody.org  nbody_generate.hh  nbody_io.hh  nbody_threaded.cc  nbody_vanilla.cc  nbody_vcl.cc  total_energy.py
ex04/: CMakeLists.txt  results.txt  scalar_product_async.cc  scalar_product_async.hh  scalar_product_async_te.cc  tree_barrier.cc
ex05/: CMakeLists.txt  MessageSystem.hh  jacobi.cc  jacobi.hh  jacobi_bm.cc  jacobi_msg.cc  jacobi_msg.hh  jacobi_par.hh  jacobi_seq.hh  jacobi_vcl.hh  residual.hh
ex07/: CMakeLists.txt  jacobi_tbb.cc  residual.hh  seidel.cc  seidel.hh  seidel_seq.hh  seidel_tbb.hh
